--- a/recipes/pepperoni-pizza.html
+++ b/recipes/pepperoni-pizza.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Recipes</title>
 </head>
+
 <body>
 
     <h1>Pepperoni Pizza</h1>
 
+    <img src="./img/pepperoni-pizza.jpg"
+        alt="A pepperoni pizza placed on a piece of cardboard on top of a chopping board">
+
+    <h2>Description</h2>
+    <p>
+        Indulge in the perfect harmony of savory and spicy with our classic pepperoni pizza recipe.
+        Crispy golden crust generously topped with zesty tomato sauce, gooey melted cheese,
+        and perfectly peppered slices of premium pepperoni for an irresistibly flavorful pizza experience.
+    </p>
+
+    <h2>Ingredients</h2>
+
+    <h3>Pizza Sauce</h3>
+    <ul>
+        <li>½ cup water</li>
+        <li>½ (12 ounce) can tomato paste</li>
+        <li>1 teaspoon dried oregano, crushed</li>
+        <li>1 teaspoon dried basil, crushed</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>½ teaspoon onion powder</li>
+        <li>½ teaspoon sugar</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon black pepper</li>
+    </ul>
+
+    <h3>Pizza Crust</h3>
+    <ul>
+        <li>3 ¼ cups all-purpose flour, or more as needed</li>
+        <li>2 (.25 ounce) envelopes pizza crust yeast</li>
+        <li>1 tablespoon sugar</li>
+        <li>1 ½ teaspoons salt</li>
+        <li>1 ⅓ cups very warm water (120 degrees F to 130 degrees F)</li>
+        <li>⅓ cup oil</li>
+    </ul>
+
+    <h3>Toppings</h3>
+    <ul>
+        <li>1 cup shredded mozzarella cheese, or more to taste</li>
+        <li>1 (6 ounce) package pepperoni</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            Preheat the oven to 425 degrees F (220 degrees C). Grease two 12-inch pizza pans.
+        </li>
+        <li>
+            Make sauce: Whisk together water, tomato paste, oregano, basil, garlic powder, onion powder, sugar, salt,
+            and pepper in a medium bowl until smooth. Set aside.
+        </li>
+        <li>
+            Make crust: Combine 2 cups flour, yeast, sugar, and salt in a large bowl. Add warm water and oil; mix until
+            well blended, about 1 minute. Gradually add remaining flour, a little at a time, until a soft, sticky dough
+            forms.
+        </li>
+        <li>
+            Transfer dough to a floured surface; knead until dough is smooth and elastic, about 4 minutes. Add more
+            flour as needed.
+        </li>
+        <li>
+            Divide dough in half. Lightly flour your hands, then pat each piece of dough onto the prepared pizza pans.
+        </li>
+        <li>
+            Top dough with sauce, cheese, and pepperoni.
+        </li>
+        <li>Bake in the preheated oven until crusts are browned and cheese is bubbly, 18 to 20 minutes. Rotate pizza
+            pans between the top and bottom oven racks halfway through baking.
+
+        </li>
+    </ol>
+
 </body>
+
 </html>
