--- a/recipes/frosted-brownie.html
+++ b/recipes/frosted-brownie.html
@@ -1,18 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Recipes</title>
 </head>
+
 <body>
     <h1>Frosted Brownie</h1>
     <img src="./img/frosted-brownie.jpg" alt="Stack of frosted brownies">
 
     <h2>Description</h2>
+    <p>
+        Satisfy your sweet cravings with our decadent frosted brownie recipe.
+        Rich, fudgy brownie squares crowned with a velvety layer of smooth chocolate frosting,
+        creating a heavenly combination of indulgence and sweetness.
+    </p>
 
     <h2>Ingredients</h2>
 
+    <h3>Brownies</h3>
+    <ul>
+        <li>½ cup butter</li>
+        <li>1 cup white sugar</li>
+        <li>2 eggs</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>⅓ cup unsweetened cocoa powder</li>
+        <li>½ cup all-purpose flour</li>
+        <li>¼ teaspoon salt</li>
+        <li>¼ teaspoon baking powder</li>
+    </ul>
+
+    <h3>Frosting</h3>
+    <ul>
+        <li>3 tablespoons butter, softener</li>
+        <li>3 tablespoons unsweetened cocoa powder</li>
+        <li>1 tablespoon honey</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup confectioners' sugar</li>
+    </ul>
+
     <h2>Steps</h2>
+    <ol>
+        <li>
+            Preheat the oven to 350 degrees F (175 degrees C). Grease and flour an 8-inch square pan.
+        </li>
+        <li>
+            Melt 1/2 cup butter in a large saucepan. Remove from heat, and stir in sugar, eggs, and 1 teaspoon vanilla.
+            Beat in 1/3 cup cocoa, flour, salt, and baking powder. Spread batter into prepared pan.
+        </li>
+        <li>
+            Bake in the preheated oven until top is dry and edges have started to pull away from the sides of the pan,
+            about 25 to 30 minutes. Let cool briefly before frosting.
+        </li>
+        <li>
+            To make the frosting: Combine softened butter, confectioners' sugar, 3 tablespoons cocoa, honey, and 1
+            teaspoon vanilla extract in a bowl. Stir until smooth. Frost brownies while they are still warm.
+        </li>
+    </ol>
 </body>
+
 </html>
