--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Recipes</title>
+    <title>Web Recipes: Home</title>
 </head>
 <body>
 
     <h1>Web Recipes</h1>
     
+    <p><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></p>
+    <p><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></p>
+
 </body>
 </html>
