--- a/recipes/butter-chicken.html
+++ b/recipes/butter-chicken.html
@@ -14,10 +14,51 @@
     <img src="./img/butter-chicken.jpg" alt="a bowl of butter chicken" width="585">
 
     <h2>Description</h2>
-    
+    <p>
+        Embark on a culinary journey with our butter chicken recipe. Succulent pieces of tender chicken bathed in a
+        luscious, creamy tomato-based curry, infused with aromatic spices and a hint of butter, offering a delightful
+        blend of flavors and textures that will transport your taste buds to a world of culinary bliss.
+    </p>
     <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup butter, divided</li>
+        <li>1 onion, minced</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>1 (15 ounce) can tomato sauce</li>
+        <li>3 cups heavy cream</li>
+        <li>2 teaspoons salt</li>
+        <li>1 teaspoon cayenne pepper</li>
+        <li>1 teaspoon garam masala</li>
+        <li>1 ½ pounds skinless, boneless chicken breast, cut into bite-sized chunks</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>2 tablespoons tandoori masala</li>
+    </ul>
 
     <h2>Steps</h2>
+    <ol>
+        <li>
+            Preheat the oven to 375 degrees F (190 degrees C).
+        </li>
+        <li>
+            Melt 2 tablespoons butter in a skillet over medium heat. Stir in onion and garlic, and cook slowly until the
+            onion caramelizes to a dark brown, about 15 minutes.
+        </li>
+        <li>
+            Meanwhile, combine cream, tomato sauce, remaining butter, salt, cayenne pepper, and garam masala in a
+            saucepan over medium-high heat; bring to a simmer. Reduce heat to medium-low, cover, and simmer, stirring
+            occasionally, for 30 minutes. Stir in caramelized onions.
+        </li>
+        <li>
+            While the sauce is simmering, toss chicken with vegetable oil until coated. Season with tandoori masala and
+            spread out onto a baking sheet.
+        </li>
+        <li>
+            Bake chicken in the preheated oven until no longer pink in the center, about 12 minutes.
+        </li>
+        <li>
+            Add cooked chicken to the sauce and simmer for 5 minutes before serving.
+        </li>
+    </ol>
 
 </body>
 
