Link index.html to butter-chicken.html
Redirects homepage to the butter chicken recipe page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <p><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></p>
     <p><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></p>
+    <p><a href="./recipes/butter-chicken.html">Butter Chicken</a></p>
 
 </body>
 </html>
