--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Recipes: Home</title>
 </head>
+
 <body>
 
     <h1>Web Recipes</h1>
-    
-    <p><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></p>
-    <p><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></p>
-    <p><a href="./recipes/butter-chicken.html">Butter Chicken</a></p>
+
+    <ul>
+        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+        <li><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></li>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+    </ul>
 
 </body>
+
 </html>
