--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
+<body class="home">
 
-    <h1>Web Recipes</h1>
+    <h1>WEB RECIPES</h1>
 
     <ul>
         <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
