--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <h1>WEB RECIPES</h1>
 
+    <h2>Recipes</h2>
     <ul>
         <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
         <li><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></li>
