Improve layout of recipe list in homepage
Add paddings to and remove margins from list elements, and justify
them to the left of the list container by adjusting its left padding.
Moreover, link text is no longer underlined

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>WEB RECIPES</h1>
 
     <h2>Recipes</h2>
-    <ul>
+    <ul class="links">
         <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
         <li><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></li>
         <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
