Horizontally align recipe list components

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2>Recipes</h2>
     <ul class="links">
-        <li id="first"><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
+        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
         <li><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></li>
-        <li id="last"><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
     </ul>
 
 </body>
