Stylize recipe pages and other quality-of-life changes

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2>Recipes</h2>
     <ul class="links">
-        <li><a href="./recipes/pepperoni-pizza.html">Pepperoni Pizza</a></li>
-        <li><a href="./recipes/frosted-brownie.html">Frosted Brownie</a></li>
-        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+        <li><a href="./recipes/pepperoni-pizza.html">pepperoni pizza</a></li>
+        <li><a href="./recipes/frosted-brownie.html">frosted brownie</a></li>
+        <li><a href="./recipes/butter-chicken.html">butter chicken</a></li>
     </ul>
 
 </body>
